# rust-oxidite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  check_publish_status.sh  demo.db
docs/: README.md  api.md  authentication.md  cli.md  core-concepts.md  database.md  features.md  framework.md  generate_book.sh  getting-started.md  middleware.md  production-guide.md  templating.md
docs/architecture/: overview.md
docs/book/: SUMMARY.md  appendix.md  architecture.md  authentication.md  book.toml  branding.js  cli.md  custom.css  database.md  docker-deployment.md  (+28 more)
example-project/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  oxidite.toml
example-project/public/css/: style.css
example-project/src/: main.rs
example-project/src/routes/: mod.rs
example-project/templates/: index.html
examples/: advanced-error-handling-simple.rs  advanced-error-handling.rs  api-versioning.rs  comprehensive-responses.rs  comprehensive.rs  comprehensive_demo.rs  demo_main.rs  enhanced-extractors.rs  full-api.rs  hello-world.rs
examples/comprehensive-test-app/: Cargo.toml
examples/comprehensive-test-app/src/: auth.rs  db.rs  main.rs  queue.rs  realtime.rs
examples/demo-app/: Cargo.toml  README.md  demo.db
examples/demo-app/migrations/: 001_initial_schema.sql
examples/demo-app/public/css/: style.css
examples/demo-app/src/: main.rs  models.rs  services.rs
examples/demo-app/src/models/: mod.rs  post.rs  user.rs
examples/demo-app/src/routes/: api.rs  api_v2.rs  auth.rs  mod.rs  posts.rs  realtime.rs  user_posts.rs  web.rs
examples/demo-app/src/services/: mod.rs
examples/demo-app/templates/: api_docs.html  home.html  layout.html
examples/demo-app/templates/errors/: 404.html
examples/demo-app/templates/posts/: list.html  new.html  show.html
examples/demo-app/templates/users/: list.html  new.html  posts.html
heirloom-waitlist/: .env  Cargo.toml  DEPLOYMENT.md  README.md  build.sh  oxidite.toml
heirloom-waitlist/public/css/: style.css
heirloom-waitlist/public/js/: script.js
heirloom-waitlist/src/: main.rs
heirloom-waitlist/templates/: about.html  faq.html  features.html  index.html
migrations/: 20241206000001_create_rbac_tables.sql  20241206000002_create_api_keys.sql  20241206000003_create_rate_limits.sql  20241206000004_add_security_features.sql
oxidite/: Cargo.toml  README.md
oxidite-auth/: Cargo.toml  README.md
oxidite-auth/src/: api_key.rs  api_key_middleware.rs  authorization.rs  hasher.rs  jwt.rs  lib.rs  middleware.rs  rbac.rs  security.rs  session.rs  session_middleware.rs
oxidite-auth/src/oauth2/: client.rs  grants.rs  mod.rs  provider.rs  providers.rs
oxidite-auth/tests/: api_key_test.rs  rbac_test.rs
oxidite-cache/: Cargo.toml  README.md
oxidite-cache/src/: lib.rs  redis.rs
oxidite-cli/: CHANGELOG.md  Cargo.toml  README.md
oxidite-cli/src/: main.rs
oxidite-cli/src/commands/: dev.rs  doctor.rs  make.rs  migrate.rs  mod.rs  new.rs  queue.rs  seed.rs  sql_script.rs
oxidite-cli/tests/: cli_integration.rs
oxidite-config/: Cargo.toml  README.md
oxidite-config/src/: lib.rs
oxidite-core/: Cargo.toml  README.md  build_output.txt
oxidite-core/src/: cookie.rs  error.rs  extract.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  tls.rs  types.rs  versioning.rs
oxidite-core/src/server/: http3_server.rs
oxidite-db/: Cargo.toml  README.md
oxidite-db/examples/: db_demo.rs  orm_golden_path.rs
oxidite-db/src/: lib.rs  migrations.rs  relations.rs
oxidite-db/tests/: derive_model.rs  relationships.rs  soft_deletes.rs  timestamps.rs  validation.rs
oxidite-graphql/: Cargo.toml  README.md
oxidite-graphql/src/: context.rs  lib.rs  resolver.rs  schema.rs
oxidite-macros/: Cargo.toml  README.md
oxidite-macros/src/: lib.rs
oxidite-macros/tests/: ui.rs
oxidite-macros/tests/ui/: fail_bad_model_attr.rs  fail_bad_model_attr.stderr  fail_deleted_at_not_option.rs  fail_deleted_at_not_option.stderr  fail_email_non_string.rs  fail_email_non_string.stderr  fail_id_not_i64.rs  fail_id_not_i64.stderr  fail_missing_id.rs  fail_missing_id.stderr  fail_non_struct.rs  fail_non_struct.stderr  fail_table_and_table_name.rs  fail_table_and_table_name.stderr  fail_unnamed_struct.rs  fail_unnamed_struct.stderr  pass_table_alias.rs  pass_table_name.rs
oxidite-mail/: Cargo.toml  README.md
oxidite-mail/src/: attachment.rs  lib.rs  mailer.rs  message.rs  transport.rs
oxidite-middleware/: Cargo.toml  README.md
oxidite-middleware/src/: cache.rs  csrf.rs  lib.rs  logger.rs  rate_limit.rs  request_id.rs  security_headers.rs  server_header.rs  timeout.rs
oxidite-openapi/: Cargo.toml  README.md
oxidite-openapi/src/: lib.rs
oxidite-plugin/: Cargo.toml  README.md
oxidite-plugin/src/: lib.rs  loader.rs  manager.rs  plugin.rs
oxidite-queue/: Cargo.toml
oxidite-queue/src/: job.rs  lib.rs  postgres.rs  queue.rs  redis.rs  worker.rs
oxidite-realtime/: Cargo.toml  README.md
oxidite-realtime/src/: event.rs  lib.rs  pubsub.rs  sse.rs
oxidite-realtime/src/websocket/: mod.rs  rooms.rs
oxidite-security/: Cargo.toml  README.md
oxidite-security/src/: crypto.rs  hash.rs  lib.rs  random.rs  sanitize.rs
oxidite-storage/: Cargo.toml  README.md
oxidite-storage/src/: lib.rs  local.rs  s3.rs  validation.rs
oxidite-template/: Cargo.toml  README.md
oxidite-template/src/: filters.rs  lib.rs  parser.rs  renderer.rs  static_files.rs
oxidite-template/tests/: inheritance.rs
oxidite-testing/: Cargo.toml  README.md
oxidite-testing/src/: lib.rs  request.rs  response.rs  server.rs
oxidite-utils/: Cargo.toml  README.md
oxidite-utils/src/: date.rs  id.rs  lib.rs  string.rs  validation.rs
oxidite-websocket/: Cargo.toml
oxidite-websocket/examples/: websocket_chat.rs
oxidite-websocket/src/: rooms.rs
oxidite/docs/architecture/: overview.md
oxidite/docs/guides/: api-keys.md  authorization.md  cli.md  database.md  fullstack.md  getting-started.md  templating.md
oxidite/src/: lib.rs
seeds/: 20241206000001_rbac_initial_data.sql
tests/: router_precedence.rs
(+102 files in other folders)
