[workspace]
resolver = "2"
members = [
    "oxidite-core",
    "oxidite-middleware",
    "oxidite-auth",
    "oxidite-db",
    "oxidite-cli",
    "oxidite-queue",
    "oxidite-cache",
    "oxidite-config",
    "oxidite-realtime",
    "oxidite-security",
    "oxidite-utils",
    "oxidite-template",
    "oxidite-storage",
    "oxidite-mail",
    "examples/demo-app", "oxidite-macros",
]
