[package]
name = "example-project"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidite = { path = "../oxidite", version = "2.1.0", features = ["full"] }
oxidite-middleware = { path = "../oxidite-middleware", version = "2.1.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]
