[package]
name = "heirloom-waitlist"
version = "0.1.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatkylemeshack@gmail.com>"]
description = "Waitlist website for the Heirloom family history platform"
license = "MIT"

[dependencies]
oxidite = { path = "../oxidite", version = "2.0.1", features = ["full"] }
oxidite-db = { path = "../oxidite-db", version = "2.0.1" }
oxidite-template = { path = "../oxidite-template", version = "2.0.1" }
oxidite-config = { path = "../oxidite-config", version = "2.0.1" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "any"] }
toml = "0.9.8"
http-body-util = "0.1"
bytes = "1.0"

[[bin]]
name = "heirloom-waitlist"
path = "src/main.rs"