[package]
name = "oxidite-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
async-trait = "0.1.89"
chrono = "0.4.42"
jsonwebtoken = "9"
oxidite-core = { path = "../oxidite-core" }
rand = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tower = "0.5.2"
redis = { version = "0.27.6", features = ["tokio-comp"] }
base64 = "0.22.1"
url = "2.5.4"
reqwest = { version = "0.12.12", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
cookie = "0.18.1"
ring = "0.17.14"
