[package]
name = "oxidite-auth"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Authentication and authorization for Oxidite (RBAC, JWT, OAuth2, 2FA, API keys)"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["auth", "authentication", "authorization", "jwt", "oauth2"]
categories = ["authentication", "web-programming"]

[dependencies]
argon2 = "0.5"
async-trait = "0.1.89"
oxidite-db = { version = "2.0.0" }
chrono = "0.4.42"
jsonwebtoken = "9"
oxidite-core = { version = "2.0.0"}
rand = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tower = "0.5.2"
redis = { version = "0.27.6", features = ["tokio-comp"] }
base64 = "0.22.1"
url = "2.5.4"
reqwest = { version = "0.12.12", features = ["json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
cookie = "0.18.1"
ring = "0.17.14"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres", "mysql"] }
sha2 = "0.10"
hex = "0.4"
totp-rs = "5.6"
urlencoding = "2.1"
