[package]
name = "oxidite-cache"
version = "2.0.1"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Caching backends (Memory, Redis) for the Oxidite v2 web framework"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["cache", "redis", "memory", "async", "web"]
categories = ["caching", "web-programming"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
