[package]
name = "oxidite-cli"
version = "0.1.1"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "CLI tool for the Oxidite web framework"
license = "MIT"
repository = "https://github.com/Kyle6012/rust-oxidite"
keywords = ["cli", "web", "framework", "scaffolding", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
bytes = "1.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
oxidite-core = "0.1.0"
oxidite-middleware = "0.1.0"
oxidite-db = "0.1.0"
oxidite-config = "0.1.0"
oxidite-queue = "0.1.0"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.42"
dialoguer = "0.11.0"
colored = "2.2.0"
notify = "6.1.1"
