[package]
name = "oxidite-cli"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "CLI tool for the Oxidite v2 web framework"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["cli", "web", "framework", "scaffolding", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
bytes = "1.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
oxidite-core = "2.0.0"
oxidite-middleware = "2.0.0"
oxidite-db = "2.0.0"
oxidite-config = "2.0.0"
oxidite-queue = "2.0.0"
oxidite-auth = "2.0.0"
oxidite-template = "2.0.0"
oxidite-cache = "2.0.0"
oxidite-realtime = "2.0.0"
oxidite-mail = "2.0.0"
oxidite-storage = "2.0.0"
oxidite-macros = "2.0.0"
oxidite-utils = "2.0.0"
oxidite-openapi = "2.0.0"

oxidite-graphql = "2.0.0"
oxidite-plugin = "2.0.0"
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.42"
dialoguer = "0.11.0"
colored = "2.2.0"
notify = "6.1.1"
