[package]
name = "oxidite-cli"
version = "2.0.2"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "CLI tool for the Oxidite v2 web framework"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["cli", "web", "framework", "scaffolding", "generator"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
bytes = "1.10.0"
http-body-util = "0.1.3"
hyper = "1.6.0"
oxidite-core = { version = "2.0.1", path = "../oxidite-core" }
oxidite-middleware = { version = "2.0.1", path = "../oxidite-middleware" }
oxidite-db = { version = "2.0.1", path = "../oxidite-db" }
oxidite-config = { version = "2.0.1", path = "../oxidite-config" }
oxidite-queue = { version = "2.0.1", path = "../oxidite-queue" }
oxidite-auth = { version = "2.0.1", path = "../oxidite-auth" }
oxidite-template = { version = "2.0.1", path = "../oxidite-template" }
oxidite-cache = { version = "2.0.1", path = "../oxidite-cache" }
oxidite-realtime = { version = "2.0.1", path = "../oxidite-realtime" }
oxidite-mail = { version = "2.0.1", path = "../oxidite-mail" }
oxidite-storage = { version = "2.0.1", path = "../oxidite-storage" }
oxidite-macros = { version = "2.0.1", path = "../oxidite-macros" }
oxidite-utils = { version = "2.0.1", path = "../oxidite-utils" }
oxidite-openapi = { version = "2.0.1", path = "../oxidite-openapi" }

oxidite-graphql = { version = "2.0.1", path = "../oxidite-graphql" }
oxidite-plugin = { version = "2.0.1", path = "../oxidite-plugin" }
tokio = { version = "1.42.0", features = ["full"] }
chrono = "0.4.42"
dialoguer = "0.11.0"
colored = "2.2.0"
notify = "6.1.1"
