[package]
name = "oxidite-config"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Configuration management for the Oxidite v2 web framework"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
homepage = "https://github.com/meshackbahati/rust-oxidite"
documentation = "https://docs.rs/oxidite-config"
keywords = ["config", "yaml", "toml", "web", "environment"]
categories = ["config", "web-programming"]

[dependencies]
dotenv = "0.15.0"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
serde_yaml = "0.9"
notify = "6.1"
thiserror = "2.0"
