[package]
name = "oxidite-db"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio", 
    "tls-native-tls", 
    "postgres", 
    "mysql", 
    "sqlite", 
    "any",
    "macros", 
    "chrono", 
    "uuid", 
    "json"
] }
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
