[package]
name = "oxidite-macros"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Procedural macros for the Oxidite v2 web framework (Model derive, etc.)"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["macros", "derive", "web", "framework", "orm"]
categories = ["web-programming", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
