[package]
name = "oxidite-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
mime = "0.3.17"
base64 = "0.22.1"
mime_guess = "2.0.5"
