[package]
name = "oxidite-mail"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Email sending for Oxidite with SMTP support"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["email", "mail", "smtp", "nodemailer", "web"]
categories = ["email", "web-programming"]

[dependencies]
lettre = { version = "0.11.14", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
mime = "0.3.17"
base64 = "0.22.1"
mime_guess = "2.0.5"
