[package]
name = "oxidite-middleware"
version = "2.0.1"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "HTTP middleware for Oxidite v2 (CORS, logging, compression, rate limiting)"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["middleware", "http", "cors", "logging", "compression"]
categories = ["web-programming"]

[dependencies]
oxidite-core = { version = "2.0.1", path = "../oxidite-core" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
sha2 = "0.10.9"
base64 = "0.22.1"
rand = "0.9.1"
thiserror = "2.0"
oxidite-db = { version = "2.0.1", path = "../oxidite-db" }
chrono = "0.4"
http = "1.2.0"
http-body-util = "0.1.0"
bytes = "1.9.0"
hyper = { version = "1.0", features = ["full"] }
