[package]
name = "oxidite-plugin"
version = "2.0.1"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Plugin system for Oxidite v2 web framework with dynamic loading and extension capabilities"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["plugin", "extension", "dynamic", "modular"]
categories = ["web-programming", "config"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
chrono = "0.4.42"
libloading = "0.8.5"

# Oxidite dependencies
oxidite-core = { version = "2.0.1", path = "../oxidite-core" }
oxidite-config = { version = "2.0.1", path = "../oxidite-config" }

[features]
default = []
