[package]
name = "oxidite-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
