[package]
name = "oxidite-realtime"
version = "2.0.1"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "WebSocket and real-time features for Oxidite"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["websocket", "realtime", "pubsub", "async", "web"]
categories = ["web-programming", "network-programming"]


[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
