[package]
name = "oxidite-security"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Security utilities for Oxidite (CSRF, XSS protection, encryption)"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["security", "csrf", "xss", "encryption", "web"]
categories = ["web-programming", "cryptography"]


[dependencies]
thiserror = "2.0"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
hex = "0.4"
