[package]
name = "oxidite-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
uuid = { version = "1.11.0", features = ["v4"] }
mime_guess = "2.0.5"
bytes = "1.11.0"

[dependencies.aws-sdk-s3]
version = "1.91.0"
optional = true

[dependencies.aws-config]
version = "1.7.0"
optional = true

[features]
default = ["s3"]
s3 = ["aws-sdk-s3", "aws-config"]
