[package]
name = "oxidite-storage"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "File storage for Oxidite with local and S3 backends"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["storage", "file", "s3", "upload", "web"]
categories = ["filesystem", "web-programming"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
uuid = { version = "1.11.0", features = ["v4"] }
mime_guess = "2.0.5"
bytes = "1.11.0"

[dependencies.aws-sdk-s3]
version = "1.91.0"
optional = true

[dependencies.aws-config]
version = "1.7.0"
optional = true

[features]
default = ["s3"]
s3 = ["aws-sdk-s3", "aws-config"]
