[package]
name = "oxidite-template"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Template engine for server-side rendering in Oxidite"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["template", "rendering", "html", "ssr", "web"]
categories = ["template-engine", "web-programming"]

[dependencies]
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
oxidite-core = { path = "../oxidite-core", version = "2.0.0" }
http = "1.1.0"
