[package]
name = "oxidite-testing"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Testing utilities for the Oxidite v2 web framework"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["web", "framework", "testing", "http", "async"]
categories = ["web-programming", "development-tools::testing"]

[dependencies]
oxidite-core = { path = "../oxidite-core", version = "2.0.0" }
oxidite-db = { path = "../oxidite-db", version = "2.0.0" }
tokio = { version = "1.48.0", features = ["full", "test-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
bytes = "1.0"
async-trait = "0.1"
http-body-util = "0.1.3"
