[package]
name = "oxidite-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.11.0", features = ["v4"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
