[package]
name = "oxidite"
version = "2.0.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "A modern, batteries-included web framework for Rust inspired by Laravel and Rails - Oxidite v2"
license = "MIT"
repository = "https://github.com/meshackbahati/rust-oxidite"
documentation = "https://docs.rs/oxidite"
homepage = "https://github.com/meshackbahati/rust-oxidite"
keywords = ["web", "framework", "http", "async", "fullstack"]
categories = ["web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
# Core functionality - Always included
oxidite-core = "2.0.0"
oxidite-middleware = "2.0.0"
oxidite-config = "2.0.0"
tokio = { version = "1.48", features = ["full", "test-util"] }

# Optional features
oxidite-db = { version = "2.0.0", optional = true }
oxidite-auth = { version = "2.0.0", optional = true }
oxidite-security = { version = "2.0.0", optional = true }
oxidite-queue = { version = "2.0.0", optional = true }
oxidite-cache = { version = "2.0.0", optional = true }
oxidite-realtime = { version = "2.0.0", optional = true }
oxidite-template = { version = "2.0.0", optional = true }
oxidite-mail = { version = "2.0.0", optional = true }
oxidite-storage = { version = "2.0.0", optional = true }
oxidite-macros = { version = "2.0.0", optional = true }
oxidite-utils = { version = "2.0.0", optional = true }
oxidite-openapi = { version = "2.0.0", optional = true }
oxidite-graphql = { version = "2.0.0", optional = true }
oxidite-plugin = { version = "2.0.0", optional = true }
serde = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
oxidite-testing = "2.0.0"

[features]
default = ["full"]

# Full framework with all features
full = [
    "database",
    "auth",
    "queue",
    "cache",
    "realtime",
    "templates",
    "mail",
    "storage",
    "graphql",
    "plugin",
]

# Individual feature groups
database = ["dep:oxidite-db", "dep:oxidite-macros"]
auth = ["dep:oxidite-auth", "database"]
queue = ["dep:oxidite-queue"]
cache = ["dep:oxidite-cache"]
realtime = ["dep:oxidite-realtime"]
templates = ["dep:oxidite-template"]
mail = ["dep:oxidite-mail"]
storage = ["dep:oxidite-storage"]
security = ["dep:oxidite-security"]
utils = ["dep:oxidite-utils"]
graphql = ["dep:oxidite-graphql"]
plugin = ["dep:oxidite-plugin"]

# Minimal setup (just HTTP server and routing)
minimal = []