[package]
name = "oxidite-demo"
version = "0.1.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]

[dependencies]
oxidite-core = { path = "../../oxidite-core" }
oxidite-auth = { path = "../../oxidite-auth" }
oxidite-db = { path = "../../oxidite-db" }
oxidite-middleware = { path = "../../oxidite-middleware" }
oxidite-openapi = { path = "../../oxidite-openapi" }
oxidite-template = { path = "../../oxidite-template" }
oxidite-realtime = { path = "../../oxidite-realtime" }
oxidite-storage = { path = "../../oxidite-storage" }
oxidite-mail = { path = "../../oxidite-mail" }
oxidite-queue = { path = "../../oxidite-queue" }
oxidite-cache = { path = "../../oxidite-cache" }
oxidite-config = { path = "../../oxidite-config" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
