[package]
name = "demo-app"
version = "0.1.0"
edition = "2021"
authors = ["Meshack Bahati Ouma <bahatikylemeshack@gmail.com>"]
description = "Demo application showcasing Oxidite v2 features"

[dependencies]
oxidite = { path = "../../oxidite", version = "2.0.1", features = ["full"] }
oxidite-template = { path = "../../oxidite-template", version = "2.0.1" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "demo-app"
path = "src/main.rs"